"we are going ......huuray"